welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:5: error: type mismatch;
 found   : Unit
 required: Int
		for(j<-0 to nums.length -1){
                     ^